--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description":  "Opal compiler",
   "keywords":     ["javascript", "opal", "compiler", "ruby"],
   "author":       "Guillaume Grossetie",
-  "version":      "0.10.1-integration2",
+  "version":      "0.10.1-integration3",
   "license":      "MIT",
   "engines":      {
     "node":       ">=0.12"
@@ -22,7 +22,7 @@
     "url": "git://github.com/asciidoctor/opal-node-compiler.git"
   },
   "dependencies": {
-    "opal-runtime": "0.10.1-integration2"
+    "opal-runtime": "0.10.2"
   },
   "devDependencies": {
     "jasmine": "^2.4.1",
