--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description":  "Opal compiler",
   "keywords":     ["javascript", "opal", "compiler", "ruby"],
   "author":       "Guillaume Grossetie",
-  "version":      "0.11.0-integration9",
+  "version":      "0.11.0-integration10",
   "license":      "MIT",
   "engines":      {
     "node":       ">=4"
@@ -22,10 +22,10 @@
     "url": "git://github.com/asciidoctor/opal-node-compiler.git"
   },
   "dependencies": {
-    "opal-runtime": "0.11.0-integration9"
+    "opal-runtime": "0.11.0-integration10"
   },
   "devDependencies": {
-    "jasmine": "^2.4.1",
-    "jasmine-core": "^2.4.1"
+    "jasmine": "2.8.0",
+    "jasmine-core": "2.8.0"
   }
 }
