Prepare the 1.0.0-alpha.1 release
- Add Travis CI
- Add eslint
- Add a public API (resolves #1)
- Add badges
- Publish a README.md

--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name":         "opal-compiler",
-  "description":  "Opal compiler",
-  "keywords":     ["javascript", "opal", "compiler", "ruby"],
-  "author":       "Guillaume Grossetie",
-  "version":      "0.11.0-rc1+934d65a",
-  "license":      "MIT",
-  "engines":      {
-    "node":       ">=4"
+  "name": "opal-compiler",
+  "description": "Opal compiler",
+  "keywords": [
+    "javascript",
+    "opal",
+    "compiler",
+    "ruby"
+  ],
+  "author": "Guillaume Grossetie",
+  "version": "1.0.0-alpha.1+0.11.0.rc1.934d65a",
+  "license": "MIT",
+  "engines": {
+    "node": ">=4"
   },
-  "directories" : {
-    "lib" : "src"
+  "directories": {
+    "lib": "src"
   },
-  "main" : "src/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "node npm/test.js"
+    "test": "node npm/test.js",
+    "lint": "eslint src/index.js spec npm",
+    "prepublishOnly": "node npm/prepublish.js",
+    "postpublish": "node npm/postpublish.js"
   },
-  "homepage":     "http://github.com/asciidoctor/opal-node-compiler",
-  "bugs":         "https://github.com/asciidoctor/opal-node-compiler/issues",
-  "repository":   {
+  "homepage": "http://github.com/asciidoctor/opal-node-compiler",
+  "bugs": "https://github.com/asciidoctor/opal-node-compiler/issues",
+  "repository": {
     "type": "git",
     "url": "git://github.com/asciidoctor/opal-node-compiler.git"
   },
@@ -25,6 +33,7 @@
     "opal-runtime": "0.11.0-rc1+934d65a"
   },
   "devDependencies": {
+    "eslint": "^4.16.0",
     "jasmine": "2.8.0",
     "jasmine-core": "2.8.0"
   }
