--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "url": "git://github.com/mogztter/opal-node-compiler.git"
   },
   "dependencies": {
-    "opal-runtime": "1.0.2+opal.fc20415"
+    "opal-runtime": "1.0.3"
   },
   "devDependencies": {
     "eslint": "^4.16.0",
