Build against iliabylich:module-prepend

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "url": "git://github.com/mogztter/opal-node-compiler.git"
   },
   "dependencies": {
-    "opal-runtime": "1.0.6"
+    "opal-runtime": "github:Mogztter/opal-node-runtime#module-prepend"
   },
   "devDependencies": {
     "eslint": "^4.16.0",
