Switch the appveyor build to npm and Node.js 8+

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,18 +5,14 @@ skip_tags: true
 clone_depth: 10
 
 environment:
-  nodejs_version: "6"
-
-cache:
- - "%LOCALAPPDATA%\\Yarn"
+  nodejs_version: "8"
 
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js
   - ps: Install-Product node $env:nodejs_version
-  - yarn
 
 build_script:
-- yarn test
+- npm run test
 
 test: off
