--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "mocha spec/**.spec.js",
-    "lint": "eslint src/index.js spec npm",
+    "lint": "standard src/index.js spec npm",
     "prepublishOnly": "node npm/prepublish.js",
     "postpublish": "node npm/postpublish.js"
   },
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "chai": "4.2.0",
-    "eslint": "6.6.0",
+    "standard": "14.3.4",
     "mocha": "7.1.2"
   }
 }
