--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "url": "git://github.com/mogztter/opal-node-compiler.git"
   },
   "dependencies": {
-    "opal-runtime": "1.0.14"
+    "opal-runtime": "2.0.0-alpha.1"
   },
   "devDependencies": {
     "chai": "4.2.0",
