npm directory does not exist

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "mocha spec/**.spec.js",
-    "lint": "standard src/index.js spec npm"
+    "lint": "standard src/index.js spec"
   },
   "homepage": "http://github.com/mogztter/opal-node-compiler",
   "bugs": "https://github.com/mogztter/opal-node-compiler/issues",
