--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   },
   "devDependencies": {
     "chai": "4.2.0",
-    "standard": "16.0.2",
-    "mocha": "8.2.1"
+    "dirty-chai": "^2.0.1",
+    "mocha": "8.2.1",
+    "standard": "16.0.2"
   }
 }
