--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "url": "git://github.com/mogztter/opal-node-compiler.git"
   },
   "dependencies": {
-    "opal-runtime": "2.2.0-beta.3"
+    "opal-runtime": "2.3.0"
   },
   "devDependencies": {
     "chai": "4.3.4",
-    "dirty-chai": "^2.0.1",
+    "dirty-chai": "2.0.1",
     "mocha": "9.1.3",
     "standard": "16.0.4"
   }
