--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ruby"
   ],
   "author": "Guillaume Grossetie",
-  "version": "2.0.0-beta.5",
+  "version": "2.1.0",
   "license": "MIT",
   "engines": {
     "node": ">=14"
