--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "version": "2.3.0",
   "license": "MIT",
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
   },
   "files": [
     "src"
@@ -31,12 +31,12 @@
     "url": "git://github.com/mogztter/opal-node-compiler.git"
   },
   "dependencies": {
-    "opal-runtime": "2.5.1"
+    "opal-runtime": "3.0.0"
   },
   "devDependencies": {
-    "chai": "4.3.4",
-    "dirty-chai": "2.0.1",
-    "mocha": "9.1.3",
-    "standard": "16.0.4"
+    "chai": "~4.3",
+    "dirty-chai": "~2.0",
+    "mocha": "~10.2",
+    "standard": "~17.0"
   }
 }
